--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,37 @@
 }
 
 
+/*  Footer   */
+
+.footer {
+  color:aliceblue;
+  margin-top:100px;
+  background-color: black;
+}
+
+.footer-Options {
+  margin-left: 540px;
+  display: flex;
+  gap:40px;
+}
+
+.footer-Options:hover {
+  color:brown
+}
+
+.footerLink-Options {
+  margin-left: 500px;
+  display: flex;
+  gap:40px;
+
+}
+
+
+.Footer-Text {
+  display: flex;
+  margin-left:550px;
+}
+
 /* for Main Section*/
 
 .mainSection{
@@ -74,25 +105,28 @@
 /* Blog CArds design*/
 
 .blogCardsMain {
-  border: 2px solid rgb(197, 197, 197);
+  /* border: 2px solid rgb(197, 197, 197); */
   margin-top:30px;
   margin-left: 20px;
   margin-right: 20px;
   display: flex;
-  height: 100%;
   width:auto;
   align-items: center;
+  height:100vh;
+  /* overflow:scroll;  */
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .blogCards {
-    width:240px;
-    height: 310px;
+    width:340px;
+    height: 390px;
     background-color: aqua;
     opacity: 70%;
     border-radius: 20px;
     box-shadow: egba(0,0,0,0) 0px , 4px , 12px;
     padding: 15px;
-    margin: 10px;
+    margin: 30px;
     transition-duration: 0.5s; /* content dhakeail rha hai*/
     border: 3px solid white;
     /* animation: golaGanda 1s ease-in 0s infinite forwards;  */
@@ -104,7 +138,7 @@
 
 .imageCard1{
   width : 100%;
-  height: 130px;
+  height: 200px;
   background-image: url('../app/public/images/food-blog1.jpg') ;
   background-size: cover;
   background-position: center;
@@ -112,7 +146,7 @@
 }
 .imageCard2{
   width : 100%;
-  height: 130px;
+  height: 200px;
   background-image: url('../app/public/images/food-blog2.jpg') ;
   background-size: cover;
   background-position: center;
@@ -120,7 +154,7 @@
 }
 .imageCard3{
   width : 100%;
-  height: 130px;
+  height: 200px;
   background-image: url('../app/public/images/food-blog3.jpg') ;
   background-size: cover;
   background-position: center;
